--- a/config/config.yaml
+++ b/config/config.yaml
@@ -238,6 +238,7 @@ components:
 
     ValueDefault:
       title: Value Default
+      x-go-type: any # TODO: Remove this when we no longer have to support the legacy string type (See ENG-1922).
       oneOf:
         - $ref: '#/components/schemas/ValueDefaultString'
         - $ref: '#/components/schemas/ValueDefaultInteger'
