--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -47,6 +47,8 @@ components:
           $ref: '#/components/schemas/IntegrationWrite'
         proxy:
           $ref: '#/components/schemas/IntegrationProxy'
+        subscribe:
+          $ref: '#/components/schemas/IntegrationSubscribe'
 
     IntegrationProxy:
       title: Proxy Integration
@@ -72,6 +74,15 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/IntegrationWriteObject'
+    
+    IntegrationSubscribe:
+      title: Subscribe Integration
+      type: object
+      properties:
+        objects:
+          type: array
+          items:
+            $ref: '#/components/schemas/IntegrationSubscribeObject'
 
     # This is currently only used for read actions.
     # Once we figure out whether to share the same type for both read and write, or use
@@ -132,6 +143,79 @@ components:
           example: true
         valueDefaults:
           $ref: '#/components/schemas/ValueDefaults'
+    
+    IntegrationSubscribeObject:
+      title: Integration Subscribe Object
+      type: object
+      required:
+        - objectName
+        - destination
+      properties: 
+        objectName:
+          type: string
+        destination:
+          type: string
+        inheritFields: 
+          type: boolean
+          description: If true, the subscribe object will inherit the fields from the read object. If false, the subscribe object will have no fields.
+        CreateEvent:
+          $ref: '#/components/schemas/CreateEvent'
+        UpdateEvent:
+          $ref: '#/components/schemas/UpdateEvent'
+        DeleteEvent:
+          $ref: '#/components/schemas/DeleteEvent'
+        AssociationChangeEvent:
+          $ref: '#/components/schemas/AssociationChangeEvent'
+        OtherEvents:
+          $ref: '#/components/schemas/OtherEvents'
+
+    CreateEvent: 
+      type : object
+      properties: 
+        enabled:
+        type: boolean
+        description: If true, the integration will subscribe to create events.
+      
+    UpdateEvent:
+      type: object
+      properties:
+        enabled:
+          type: boolean
+          description: If true, the integration will subscribe to update events.
+        requiredWatchFields:
+        type: array
+        items:
+          type: string
+          description: The fields that are required to be watched for updates. 
+          example: 
+            - name
+            - domain
+    
+    DeleteEvent:
+      type: object
+      properties:
+        enabled:
+          type: boolean
+          description: If true, the integration will subscribe to delete events.
+
+    AssociationChangeEvent:
+      type: object
+      properties:
+        enabled:
+          type: boolean
+          description: If true, the integration will subscribe to association change events.
+        includeFullRecords:
+          type: boolean
+          description: If true, the integration will include full records in the event payload.
+    
+    OtherEvents:
+      type: array
+      items:
+        type: string
+        description: The other events that the integration will subscribe to.
+        example: 
+          - object.merged 
+          - object.restored
 
     HydratedIntegration:
       title: Hydrated Integration
