--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -157,7 +157,7 @@ components:
           type: string
         inheritFields: 
           type: boolean
-          description: If true, the subscribe object will inherit the fields from the read object. If false, the subscribe object will have no fields.
+          description: If true, the subscribe object will inherit the fields from the read object. 
         CreateEvent:
           $ref: '#/components/schemas/CreateEvent'
         UpdateEvent:
