--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -212,7 +212,7 @@ components:
       type: array
       items:
         type: string
-        description: The other events that the integration will subscribe to.
+        description: Non-standard events that the integration will subscribe to.
         example: 
           - object.merged 
           - object.restored
