fix: updateAssociation -> associationUpdate

--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -133,12 +133,12 @@ components:
         toRecord:
           $ref: '#/components/schemas/AssociatedObject'
         subscribeEventType:
-          description: The type of event that triggered the message.
+          description: The type of event that triggered the message, this is normalized across all providers.
           type: string
           enum:
             - create
             - update
-            - updateAssociation
+            - associationUpdate
             - delete
             - other
           x-enumNames:
