--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -176,9 +176,21 @@ components:
       title: Associated Object
       type: object
       description: An associated object that is attached to the association event in the webhook message.
+      required:
+        - id
       properties:
         id:
           description: The ID of the associated record.
+          type: string
+          x-go-type-skip-optional-pointer: true
+        objectName:
+          description:
+            The name of the object. If there is a mapping for this object, this is the mapped name.
+            Otherwise, it is the name used by the SaaS provider API.
+          type: string
+          x-go-type-skip-optional-pointer: true
+        rawObjectName:
+          description: If there is a mapping for this object, this is the name used by the SaaS provider API.
           type: string
           x-go-type-skip-optional-pointer: true
         fields:
