--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -383,6 +383,11 @@ components:
           type: string
           enum: [providerApp, integration, installation]
           description: The timing of the registration.
+        requirePostSubscriptionProcessing:
+          type: boolean
+          description: Whether the provider requires post-processing after subscription
+          example: true
+          x-go-type-skip-optional-pointer: true
 
     SubscribeSupport:
       title: Subscribe Support
