--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -371,6 +371,7 @@ components:
         - subscriptionScope
         - targetURLScope
         - registrationTiming
+        - requirePostSubscriptionProcessing
       properties:
         subscriptionScope:
           type: string
