--- a/config/config.yaml
+++ b/config/config.yaml
@@ -263,7 +263,7 @@ components:
           properties:
             value:
               type: string
-              x-go-type-skip-optional-pointer: true
+              x-go-type-skip-optional-pointer: false # Good to understand if a default value is a zero value or missing.
               description: The default string value to apply to a field
         writeOnCreate:
           type: string
@@ -290,7 +290,7 @@ components:
           properties:
             value:
               type: integer
-              x-go-type-skip-optional-pointer: true
+              x-go-type-skip-optional-pointer: false # Good to understand if a default value is a zero value or missing.
               description: The default integer value to apply to a field
         writeOnCreate:
           type: string
@@ -316,7 +316,7 @@ components:
           properties:
             value:
               type: boolean
-              x-go-type-skip-optional-pointer: true
+              x-go-type-skip-optional-pointer: false # Good to understand if a default value is a zero value or missing.
               description: The default boolean value to apply to a field
         writeOnCreate:
           type: string
