enforce config has object name

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -117,6 +117,8 @@ components:
     BaseWriteConfigObject:
       title: Base Write Config Object
       type: object
+      required:
+        - objectName
       properties:
         objectName:
           description: The name of the object to write to.
