--- a/config/config.yaml
+++ b/config/config.yaml
@@ -266,13 +266,13 @@ components:
 
     FieldSettingDefault:
       title: Default value for a field
-      description: Only use one of stringValue, intValue, booleanValue.
+      description: Only use one of stringValue, integerValue, booleanValue.
       type: object
       properties:
         stringValue:
           type: string
           description: The default string value to apply to a field
-        intValue:
+        integerValue:
           type: integer
           description: The default integer value to apply to a field
         booleanValue:
