--- a/api/api.yaml
+++ b/api/api.yaml
@@ -2647,12 +2647,13 @@ components:
           properties:
             brandingRemoval:
               type: object
+              required:
+                - value
               x-go-type-skip-optional-pointer: true
               description: Whether branding can be removed from the UI library.
               properties:
                 value:
                   type: boolean
-                  required: true
                   description: Whether branding has been removed from the project.
     ProviderApp:
       title: Provider App
